force-app/main/default/objects/Asset_Item__c/Asset_Item__c.object-meta.xml
<CustomObject>
    <description>Records each Catalyst Platform module licence held by a client Account. OWD is Controlled by Parent via Master-Detail to Account. Core layer object — present in all verticals. Do not modify from a vertical branch.</description>
    <label>Asset Item</label>
    <nameField>
        <displayFormat>ASSET-{0000}</displayFormat>
        <label>Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>