force-app/main/default/objects/Asset_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Master-detail relationship to the Account that owns this asset. Drives OWD sharing (Controlled by Parent).</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Items</relationshipLabel>
    <relationshipName>Asset_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>