force-app/main/default/objects/Asset_Item__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>Date the asset or licence was activated for the client.</description>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>