force-app/main/default/objects/Asset_Item__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary client contact responsible for this asset or licence.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asset Items</relationshipLabel>
    <relationshipName>Asset_Items</relationshipName>
    <type>Lookup</type>
</CustomField>