force-app/main/default/objects/Asset_Item__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Date the asset or licence expires. Used by renewal proximity component of Account Health Score.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>