force-app/main/default/objects/Asset_Item__c/fields/Licence_Key__c.field-meta.xml
<CustomField>
    <fullName>Licence_Key__c</fullName>
    <description>Encrypted licence key for the asset. Not exposed to Experience Cloud portal users — FLS restricted on all portal-facing permission sets.</description>
    <label>Licence Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>