force-app/main/default/objects/Asset_Item__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>Specific Catalyst Platform module covered by this asset. Drives usage reporting and health score calculation.</description>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Intelligence</fullName>
            </value>
            <value>
                <fullName>Audience Studio</fullName>
            </value>
            <value>
                <fullName>Attribution Engine</fullName>
            </value>
            <value>
                <fullName>Content Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>